--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,10 @@ web_modules/
 .env
 .env.*
 !.env.example
+prod.env
+
+# private keys
+*.p8
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
