--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
     "author": "Northern Captain",
     "license": "MIT",
     "dependencies": {
+        "axios": "^1.6.0",
         "env-cmd": "^10.1.0",
-        "telegraf": "4.15.0",
+        "jsonwebtoken": "^9.0.2",
         "sequelize": "^6.35.1",
         "sqlite3": "^5.1.6",
-        "winston": "^3.11.0",
-        "axios": "^1.6.0",
-        "jsonwebtoken": "^9.0.2",
-        "string-similarity": "^4.0.4"
+        "string-similarity": "^4.0.4",
+        "telegraf": "^4.16.3",
+        "winston": "^3.11.0"
     },
     "devDependencies": {
-        "prettier": "^3.0.3",
         "jest": "^29.7.0",
+        "prettier": "^3.0.3",
         "supertest": "^6.3.3"
     },
     "jest": {
@@ -33,6 +33,10 @@
             "!src/app.js"
         ],
         "coverageDirectory": "coverage",
-        "coverageReporters": ["text", "lcov", "html"]
+        "coverageReporters": [
+            "text",
+            "lcov",
+            "html"
+        ]
     }
 }
